--- a/wa/wa5/styles.css
+++ b/wa/wa5/styles.css
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url('b2.webp') center/cover no-repeat;
+    background: url('broncos.jpg') center/cover no-repeat;
     filter: blur(5px);
     z-index: -1; /* Keeps it in the background */
 }
@@ -47,17 +47,18 @@
 
 
 .top-text {
-    top: 0%;
-    left: 50%;
+    top: 3%;
+    left: 70%;
     transform: translateX(-50%);
-    font-size: 3em;
+    font-size: 1em;
     white-space: nowrap;
 }
 
 
 .bottom-text {
     bottom: 0%;
-    left: 50%;
+    left: 70%;
     transform: translateX(-50%);
-    font-size: 3em;
+    font-size: 2.8em;
+    white-space: nowrap;
 }
