--- a/wa/wa6/styles.css
+++ b/wa/wa6/styles.css
@@ -84,11 +84,12 @@ article img {
   width: 100%;
 }
  
-
+/*CHECK TO SEE IF THIS WORKS*/
 @media (max-width: 500px) {
   main {
     flex-direction: column;
   }
+  
   nav ul {
     flex-direction: column;
   }
